Revision 3 fixed overflow problem. Not client request

--- a/munlu/css/style.css
+++ b/munlu/css/style.css
@@ -168,7 +168,7 @@ body {
   color: #222222;
   font-size: 16px;
   background: black;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 h1,
